--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <meta name="keywords" content="To jest szkielet strony">
 <meta name="description" content="szkoła, technikum, CKZIU, Mechanik, html, nauka">
 <meta name="author" content="Bartosz Gieda">
-<title>Brzechwa</title>
+<title>Choulera</title>
 <link rel="stylesheet" href="stylebrzechwa.css" type="text/css">
 <body>
 <h1><a href="https://pl.wikipedia.org/wiki/Jan_Brzechwa">Jan Brzechwa</a></h1>
