--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 </div>
 <div id="navi">
 <ul>
+<li><a href="Strony/10 CSS zewnętrzny/brzechwa.html">Brzechwa</a></li>
 <li><a href="">Strona na zaliczenie</a></li>
-<li><a href=""></a></li>
 <li><a href=""></a></li>
 <li><a href=""></a></li>
 </ul>
