--- a/index.html
+++ b/index.html
@@ -23,7 +23,19 @@
 </ul>
 </div>
 <div class="slajd">
-<p></p>
-
+<p>Strony</p>
+<ol>
+  <li>Szablon</li>
+  <li>Podstawy 1 strona</li>
+  <li>Grafika</li>
+  <li>Miłosz</li>
+  <li>Tabele</li>
+  <li>Div i Span</li>
+  <li>Formularze</li>
+  <li>Znaki specjalne</li>
+  <li>CSS wpisany</li>
+  <li>CSS osadzony</li>
+  <li>CSS zewnętrzny</li>
+</ol>
 </div>
 </body>
