--- a/index.html
+++ b/index.html
@@ -29,6 +29,9 @@
   <li>Podstawy 1 strona</li>
   <li>Grafika</li>
   <li>Miłosz</li>
+  <ul>
+  <li><a href="Strony/3_Milosz/index.html">index.html</a></li>
+  </ul>
   <li>Tabele</li>
   <li>Div i Span</li>
   <li>Formularze</li>
