--- a/index.html
+++ b/index.html
@@ -29,7 +29,11 @@
     <ul>
     <li><a href="Strony/0_Strona/index.html">index.html</a></li>
     </ul>
-  <li>Podstawy 1 strona</li>
+  <li>Podstawy 1 strona<select>
+    <option value="index"><a href="Strony/1_Strona_podstawy/index.html">index.html</a></option>
+    <option value="formatowanie"><a href="Strony/1_Strona_podstawy/formatowanie.html">formatowanie.html</a></option>
+    <option value="zwierzeta"><a href="Strony/1_Strona_podstawy/zwierzeta.html">zwierzęta.html</a></option>
+  </select></li>
     <ul>
     <li><a href="Strony/1_Strona_podstawy/index.html">index.html</a></li>
     <li><a href="Strony/1_Strona_podstawy/formatowanie.html">formatowanie.html</a></li>
