--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
 </div>
 <div id="navi">
 <ul>
-<li><a class="l" href="Strony/10 CSS zewnętrzny/brzechwa.html">Brzechwa</a></li>
-<li><a href=""></a></li>
-<li><a href=""></a></li>
-<li><a href=""></a></li>
+  <li><a class="l" href="index.html"></a>Strony z lekcji</li>
+  <li><a class="l" href="Strony/10 CSS zewnętrzny/brzechwa.html">Brzechwa</a></li>
+  <li><a class="l" href=""></a></li>
+  <li><a href=""></a></li>
 </ul>
 </div>
 <div class="slajd">
