--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <ul>
   <li><a class="l" href="index.html"></a>Strony z lekcji</li>
   <li><a class="l" href="Strony/10 CSS zewnętrzny/brzechwa.html">Brzechwa</a></li>
-  <li><a class="l" href=""></a></li>
+  <li><a class="l" href="budowa/index.html">Budowa komputera</a></li>
   <li><a href=""></a></li>
 </ul>
 </div>
