--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </div>
 <div id="navi">
 <ul>
-  <li><a class="l" href="index.html"></a>Strony z lekcji</li>
+  <li><a class="l" href="index.html"></a>Strony stare</li>
   <li><a class="l" href="Strony/10 CSS zewnętrzny/brzechwa.html">Brzechwa</a></li>
   <li><a class="l" href="budowa/index.html">Budowa komputera</a></li>
   <li><a href=""></a></li>
