--- a/index.html
+++ b/index.html
@@ -16,66 +16,10 @@
 </div>
 <div class="slajd">
 <p>Strony</p>
-<ol>
-  <li>Szablon</li>
-    <ul>
-    <li><a href="Strony/0_Strona/index.html">index.html</a></li>
-    </ul>
-  <li>Podstawy 1 strona</li>
-    <ul>
-    <li><a href="Strony/1_Strona_podstawy/index.html">index.html</a></li>
-    <li><a href="Strony/1_Strona_podstawy/formatowanie.html">formatowanie.html</a></li>
-    <li><a href="Strony/1_Strona_podstawy/zwierzeta.html">zwierzęta.html</a></li>
-    </ul>
-  <li>Grafika</li>
-    <ul>
-    <li><a href="Strony/2_Grafika/index.html">index.html</a></li>
-    </ul>
-  <li>Miłosz</li>
-    <ul>
-    <li><a href="Strony/3_Milosz/index.html">index.html</a></li>
-    </ul>
-  <li>Tabele</li>
-    <ul>
-    <li><a href="Strony/4_Tabele/cwiczenie.html">ćwieczenie.html</a></li>
-    <li><a href="Strony/4_Tabele/index.html">index.html</a></li>
-    </ul>
-  <li>Div i Span</li>
-    <ul>
-    <li><a href="Strony/5_div_span/div_span.html">div span.html</a></li>
-    </ul>
-  <li>Formularze</li>
-    <ul>
-    <li><a href="Strony/6_Formularze/ankieta.html.html">ankieta.html</a></li>
-    </ul>
-  <li>Znaki specjalne</li>
-    <ul>
-    <li><a href="Strony/7_Znaki_specjalne/index.html">index.html</a></li>
-    </ul>
-  <li>CSS wpisany</li>
-    <ul>
-    <li><a href="Strony/8_CSS_wpisany/czcionka.html">czcionka.html</a></li>
-    <li><a href="Strony/8_CSS_wpisany/kolory.html">kolory.html</a></li>
-    <li><a href="Strony/8_CSS_wpisany/linia.html">linia.html</a></li>
-    <li><a href="Strony/8_CSS_wpisany/przyklad12.html">przykład 1 i 2.html</a></li>
-    <li><a href="Strony/8_CSS_wpisany/przyklad3.html">przykład 3.html</a></li>
-    <li><a href="Strony/8_CSS_wpisany/raciborz.html">racibórz.html</a></li>
-    <li><a href="Strony/8_CSS_wpisany/ramki.html">ramki.html</a></li>
-    <li><a href="Strony/8_CSS_wpisany/tecza.html">tęcza.html</a></li>
-    <li><a href="Strony/8_CSS_wpisany/tlo.html">tło.html</a></li>
-    <li><a href="Strony/8_CSS_wpisany/word.html">word.html</a></li>
-    </ul>
-  <li>CSS osadzony</li>
-    <ul>
-    <li><a href="Strony/9_CSS_osadzony/brzechwa.html">brzechwa.html</a></li>
-    <li><a href="Strony/9_CSS_osadzony/index.html">index.html</a></li>
-    <li><a href="Strony/9_CSS_osadzony/raciborz.html">racibórz.html</a></li>
-    </ul>
-  <li>CSS zewnętrzny</li>
-    <ul>
-    <li><a href="Strony/10_CSS_zewnetrzny/brzechwa.html">brzechwa.html</a></li>
-    <li><a href="Strony/10_CSS_zewnetrzny/styl_zew.html">styl zewnętrzny.html</a></li>
-    </ul>
-</ol>
+<ul>
+  <li><a href="stare.html">Stare strony</a></li>
+  <li><a href="budowa/index.html">Budowa komputera</a></li>
+  <li><a href="Strony/10_CSS_zewnetrzne/brzechwa.html">Brzechwa</a></li>
+</ul>
 </div>
 </body>
