--- a/stare.html
+++ b/stare.html
@@ -16,7 +16,8 @@
 </div>
 </div>
 <div class="slajd">
-<p>Strony</p>
+<a href="index.html">↩️Powrót do strony głównej</a>
+<p>Stare strony z lekcji</p>
 <ol>
   <li>Szablon</li>
     <ul>
