--- a/stare.html
+++ b/stare.html
@@ -16,8 +16,9 @@
 </div>
 </div>
 <div class="slajd">
-<a href="index.html">↩️Powrót do strony głównej</a>
+<a href="index.html">↩️↩Powrót do strony głównej</a>
 <p>Stare strony z lekcji</p>
+  <div class="linia" />
 <ol>
   <li>Szablon</li>
     <ul>
