--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
 <h1>Bartosz Gieda</h1>
 </div>
 <div class="slajd">
-<p>Strony</p>
+<p>Projekty z zajęć</p>
+<div class="linia"></div>
 <ul>
   <li><a href="stare.html">Stare strony</a></li>
   <li><a href="budowa/index.html">Budowa komputera</a></li>
