--- a/budowa/jedn centr.html
+++ b/budowa/jedn centr.html
@@ -88,7 +88,7 @@ Przykłady:
 <div class="linia"></div>
 <h3 id="6">Obudowa komputera</h3>
 Jest jak gdyby skóra komputera. W jej wnętrzu umieszczana jest jednostka centralna wraz z kartami rozszerzeń. Rodzaj obudowy może zadecydować o rodzaju płyty głównej umieszczonej wewnątrz niej, a co za tym idzie również o innych parametrach komputera (rodzaj procesora, ilość pamięci czy kart rozszerzeń). Rozmieszczenie elementów na płycie głównej jest standaryzowane (np. ATX).
-
-
+<div class="linia"></div>
+<a class="pom" href="index.html">Powrót do strony głównej</a>
 </body>
 </html>
