--- a/budowa/O.html
+++ b/budowa/O.html
@@ -38,6 +38,6 @@ Parametry monitora:
 <li>rozdzielczość - max. ilość punktów w poziomie i pionie możliwych do wyświetlenia bez straty jakości. </li>
 </ul>
 <div class="linia"></div>
-
+<a class="pom" href="index.html">Powrót do strony głównej</a>
 </body>
 </html>
