--- a/budowa/I.html
+++ b/budowa/I.html
@@ -33,6 +33,6 @@ Nie potrzebuje filmu fotograficznego; docierający do niego obraz trafia na matr
 <li>zoom optyczny i cyfrowy.</li>
 </ul>
 <div class="linia"></div>
-
+<a class="pom" href="index.html">Powrót do strony głównej</a>
 </body>
 </html>
