--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
 <div class="linia"></div>
 <ul>
   <li><a href="stare.html">Stare strony</a></li>
+  <li><a href="szablony/3kolumny.html">3 kolumny</a></li>
+  <li><a href="szablony/index.html">2 kolumny</a></li>
   <li><a href="budowa/index.html">Budowa komputera</a></li>
   <li><a href="Strony/10_CSS_zewnetrzny/brzechwa.html">Brzechwa</a></li>
 </ul>
