--- a/index.html
+++ b/index.html
@@ -24,11 +24,12 @@
 <div class="linia"></div>
 <button onclick="toggleDarkMode()">Zmień motyw</button>
 <ul>
-  <li><a href="stare.html">Stare strony</a></li>
-  <li><a href="szablony/3kolumny.html">3 kolumny</a></li>
-  <li><a href="szablony/index.html">2 kolumny</a></li>
+  <li><a href="szablony/3szablon.html">3 szablon</a></li>
+  <li><a href="szablony/3kolumny.html">2 szablon</a></li>
+  <li><a href="szablony/index.html">1 szablon</a></li>
   <li><a href="budowa/index.html">Budowa komputera</a></li>
   <li><a href="Strony/10_CSS_zewnetrzny/brzechwa.html">Brzechwa</a></li>
+  <li><a href="stare.html">Stare strony</a></li>
 </ul>
 </div>
 </body>
