--- a/szablony/3szablon.html
+++ b/szablony/3szablon.html
@@ -29,6 +29,7 @@
             <div class="block"><a href="">Widok</a>
             </div>   
         </div>
+        <div class="container2">
         <div id="left">Pobliskie wsie:
             <ul>
                 <li>Pogrzebień</li>
@@ -67,7 +68,7 @@
             4 lipca 1922 roku).
 
             W latach 1954-1972 wieś należała i była siedzibą władz gromady Brzezie nad Odrą.</div>
-        <div id="right"></div>
+        <nav id="right"></nav></div>
         <div id="footer">Strona autorstwa Bartosz Gieda<br>Kontakt. +48 903 340 432 bartoszgieda@gmail.com</div>
     </div>
 </body>
