--- a/szablony/3szablon.html
+++ b/szablony/3szablon.html
@@ -10,6 +10,7 @@
     <meta name="keywords" content="szkoła, technikum, CKZIU, Mechanik, html, nauka">
     <meta name="author" content="Bartosz Gieda">
     <link rel="stylesheet" href="style3.css" type="text/css">
+    <link rel="icon" type="image/x-icon" href="brzezie.jpg">
     <title>Szablon #3</title>
 </head>
 
