--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
 <title>Bartosz Gieda</title>
 </head>
 <body>
-<div id="name">
+<header>
 <h1>Bartosz Gieda</h1>
-</div>
-<div class="slajd">
+</header>
+<main>
 <p>Projekty z zajęć</p>
-<div class="linia"></div>
+<div class="line"></div>
 <ul>
   <li><a href="szablony/3szablon.html">3 szablon</a></li>
   <li><a href="szablony/3kolumny.html">2 szablon</a></li>
@@ -25,5 +25,5 @@
   <li><a href="Strony/10_CSS_zewnetrzny/brzechwa.html">Brzechwa</a></li>
   <li><a href="stare.html">Stare strony</a></li>
 </ul>
-</div>
+</main>
 </body>
