--- a/stare.html
+++ b/stare.html
@@ -11,14 +11,14 @@
 <title>Bartosz Gieda</title>
 </head>
 <body>
-<div id="name">
+<header>
 <h1>Bartosz Gieda</h1>
+</header>
 </div>
-</div>
-<div class="slajd">
+<main>
 <a href="index.html">↩️Powrót do strony głównej</a>
 <p>Stare strony z lekcji</p>
-  <div class="linia"></div>
+  <div class="line"></div>
 <ol>
   <li>Szablon</li>
     <ul>
@@ -80,5 +80,5 @@
     <li><a href="Strony/10_CSS_zewnetrzny/styl_zew.html">styl zewnętrzny.html</a></li>
     </ul>
 </ol>
-</div>
+</main>
 </body>
