--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
 <p>Projekty z zajęć</p>
 <div class="line"></div>
 <ul>
+  <li><a href="szablony/js/galeria.html">js1</a></li>
+  <li><a href="szablony/4szablon.html">4 szablon</a></li>
+  <li><a href="szablony/4szablon.html">4 szablon</a></li>
   <li><a href="szablony/4szablon.html">4 szablon</a></li>
   <li><a href="szablony/3szablon.html">3 szablon</a></li>
   <li><a href="szablony/3kolumny.html">2 szablon</a></li>
