--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <p>Projekty z zajęć</p>
 <div class="line"></div>
 <ul>
-  <li><a href="szablony/js/galeria.html">js1</a></li>
+  <li><a href="js/galeria.html">js1</a></li>
   <li><a href="szablony/4szablon.html">4 szablon</a></li>
   <li><a href="szablony/4szablon.html">4 szablon</a></li>
   <li><a href="szablony/4szablon.html">4 szablon</a></li>
