--- a/js/galeria.html
+++ b/js/galeria.html
@@ -213,9 +213,9 @@ setTimeout('disco()',50)
               <TD bgcolor="#330099">
                 <DIV align="center">
                   <SELECT name="Oneslide" onChange="Onechange();">
-                    <OPTION value="slideimage1.gif"  selected>Image 1</OPTION>
-                    <OPTION value="slideimage2.gif">Image 2</OPTION>
-                    <OPTION value="slideimage3.gif">Image 3</OPTION>
+                    <OPTION value="https://static.wikia.nocookie.net/wiewiorcze-oc/images/1/1c/Bober.jpg/revision/latest?cb=20210504184038&path-prefix=pl">Image 1</OPTION>
+                    <OPTION value="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQXGMtJatG0nPh_seBjFlAGQAl94EqsX_O3liK4g17_Lw7WGZwGajKvQA6CWw6cJD48LKY&usqp=CAU">Image 2</OPTION>
+                    <OPTION value="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRGaVocuNGFzCBqBD21dLXatFhZZkQKk6beVKiu0OqBhMwUgtNBePqKaDYoNCW5sxCdLXE&usqp=CAU">Image 3</OPTION>
                   </SELECT>
       </DIV>
               </TD>
