--- a/js/galeria.html
+++ b/js/galeria.html
@@ -213,7 +213,7 @@ setTimeout('disco()',50)
               <TD bgcolor="#330099">
                 <DIV align="center">
                   <SELECT name="Oneslide" onChange="Onechange();">
-                    <OPTION value="https://static.wikia.nocookie.net/wiewiorcze-oc/images/1/1c/Bober.jpg/revision/latest?cb=20210504184038&path-prefix=pl">Image 1</OPTION>
+                    <OPTION value="https://static.wikia.nocookie.net/cierpliwosc/images/e/e3/Bub.jpg/revision/latest?cb=20200817001430&path-prefix=pl">Image 1</OPTION>
                     <OPTION value="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQXGMtJatG0nPh_seBjFlAGQAl94EqsX_O3liK4g17_Lw7WGZwGajKvQA6CWw6cJD48LKY&usqp=CAU">Image 2</OPTION>
                     <OPTION value="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRGaVocuNGFzCBqBD21dLXatFhZZkQKk6beVKiu0OqBhMwUgtNBePqKaDYoNCW5sxCdLXE&usqp=CAU">Image 3</OPTION>
                   </SELECT>
@@ -239,6 +239,80 @@ setTimeout('disco()',50)
 <p>This free script provided by<br />
 <a href="http://javascriptkit.com">JavaScript
 Kit</a></p>
-    
+    <b>
+
+<script>
+
+/*
+RAINBOW TEXT Script by Matt Hedgecoe (c) 2002
+Featured on JavaScript Kit
+For this script, visit http://www.javascriptkit.com
+*/
+
+// ********** MAKE YOUR CHANGES HERE
+
+var text="RAINBOW TEXT" // YOUR TEXT
+var speed=80 // SPEED OF FADE
+
+// ********** LEAVE THE NEXT BIT ALONE!
+
+
+if (document.all||document.getElementById){
+document.write('<span id="highlight">' + text + '</span>')
+var storetext=document.getElementById? document.getElementById("highlight") : document.all.highlight
+}
+else
+document.write(text)
+var hex=new Array("00","14","28","3C","50","64","78","8C","A0","B4","C8","DC","F0")
+var r=1
+var g=1
+var b=1
+var seq=1
+function changetext(){
+rainbow="#"+hex[r]+hex[g]+hex[b]
+storetext.style.color=rainbow
+}
+function change(){
+if (seq==6){
+b--
+if (b==0)
+seq=1
+}
+if (seq==5){
+r++
+if (r==12)
+seq=6
+}
+if (seq==4){
+g--
+if (g==0)
+seq=5
+}
+if (seq==3){
+b++
+if (b==12)
+seq=4
+}
+if (seq==2){
+r--
+if (r==0)
+seq=3
+}
+if (seq==1){
+g++
+if (g==12)
+seq=2
+}
+changetext()
+}
+function starteffect(){
+if (document.all||document.getElementById)
+flash=setInterval("change()",speed)
+}
+starteffect()
+</script>
+</b>
+
+<p align="center">This free script provided by<br /><a href="http://javascriptkit.com">JavaScript Kit</a></p>
 </body>
 </html>
