--- a/js/galeria.html
+++ b/js/galeria.html
@@ -213,7 +213,7 @@ setTimeout('disco()',50)
               <TD bgcolor="#330099">
                 <DIV align="center">
                   <SELECT name="Oneslide" onChange="Onechange();">
-                    <OPTION value="https://static.wikia.nocookie.net/cierpliwosc/images/e/e3/Bub.jpg/revision/latest?cb=20200817001430&path-prefix=pl">Image 1</OPTION>
+                    <OPTION value="https://i.kym-cdn.com/entries/icons/facebook/000/027/355/bober_bobr.jpg">Image 1</OPTION>
                     <OPTION value="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQXGMtJatG0nPh_seBjFlAGQAl94EqsX_O3liK4g17_Lw7WGZwGajKvQA6CWw6cJD48LKY&usqp=CAU">Image 2</OPTION>
                     <OPTION value="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRGaVocuNGFzCBqBD21dLXatFhZZkQKk6beVKiu0OqBhMwUgtNBePqKaDYoNCW5sxCdLXE&usqp=CAU">Image 3</OPTION>
                   </SELECT>
