--- a/js/galeria.html
+++ b/js/galeria.html
@@ -370,7 +370,7 @@ For this and over 400+ free scripts, visit http://javascriptkit.com
 */
 
 var trailLength = 8 // The length of trail (8 by default; put more for longer "tail")
-var path = "cursor.gif" // URL of your image
+var path = "https://i.kym-cdn.com/entries/icons/facebook/000/027/355/bober_bobr.jpg" // URL of your image
 
 var standardbody=(document.compatMode=="CSS1Compat")? document.documentElement : document.body //create reference to common "body" across doctypes
 var i,d = 0
