--- a/zaliczenie/index.html
+++ b/zaliczenie/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <head>
 <link rel="shortcut icon" href="">
 <link rel="stylesheet" href="style.css">
@@ -10,30 +11,28 @@
 <body>
 <div id="container">
 <header>
-    
-        <img src="bike.png" width="100px" />
+        <img src="bike.png" width="100px">
         Rowerowy Racibórz
-    
 </header>
 <nav>
     <ul>
-        <li><a href="Wilenska.html">Wileńska/Warszawska 1,2km</a><div class="emptyline"><div class="line"></div></div></li></li>
-        <li><a href="Marianska.html">Mariańska 1,6km</a><div class="emptyline"><div class="line"></div></div></li>
-        <li><a href="Brzeska.html">Brzeska 0,85km</a><div class="emptyline"><div class="line"></div></div></li>
-        <li><a href="Kosciuszki.html">Kościuszki 1km</a><div class="emptyline"><div class="line"></div></div></li>
-        <li><a href="Rybnicka.html">Rybnicka</a><div class="emptyline"><div class="line"></div></div></li>
-        <li><a href="Maja1.html">1 Maja/Dąbrowszczaków 1,5km</a><div class="emptyline"><div class="line"></div></div></li>
-        <li><a href="Wygonowa.html">Wygonowa</a><div class="emptyline"><div class="line"></div></div></li>
-        <li><a href="Sudecka.html">Sudecka 1,7km</a><div class="emptyline"><div class="line"></div></div></li>
-        <li><a href="Gliwicka.html">Gliwicka</a><div class="emptyline"><div class="line"></div></div></li>
-        <li><a href="Matejki.html">Matejki 0,2km</a><div class="emptyline"><div class="line"></div></div></li>
-        <li><a href="Opawska.html">Opawska/Łąkowa 2,3km</a><div class="emptyline"><div class="line"></div></div></li>
-        <li><a href="Miarki.html">Karola Miarki 0,3km</a><div class="emptyline"><div class="line"></div></div></li>
-        <li><a href="Piaskowa.html">Piaskowa 1,45km</a><div class="emptyline"><div class="line"></div></div></li>
-        <li><a href="Wschodnia.html">Wschodnia 0,45km</a><div class="emptyline"><div class="line"></div></div></li>
-        <li><a href="Fabryczna.html">Fabryczna/Szkolna 0,6km</a><div class="emptyline"><div class="line"></div></div></li>
-        <li><a href="Ścieżka wzdłuż Odry.html">Ścieżka wzdłuż Odry 11km</a><div class="emptyline"><div class="line"></div></div></li>
-        <li><a href="Wał przeciwpowodziowy.html">Wał przeciwpowodziowy 4,4km</a><div class="emptyline"><div class="line"></div></div></li>
+        <li><a href="wilenska.html">Wileńska/Warszawska 1,2km</a><div class="emptyline"><div class="line"></div></div></li>
+        <li><a href="marianska.html">Mariańska 1,6km</a><div class="emptyline"><div class="line"></div></div></li>
+        <li><a href="brzeska.html">Brzeska 0,85km</a><div class="emptyline"><div class="line"></div></div></li>
+        <li><a href="kosciuszki.html">Kościuszki 1km</a><div class="emptyline"><div class="line"></div></div></li>
+        <li><a href="rybnicka.html">Rybnicka</a><div class="emptyline"><div class="line"></div></div></li>
+        <li><a href="maja1.html">1 Maja/Dąbrowszczaków 1,5km</a><div class="emptyline"><div class="line"></div></div></li>
+        <li><a href="wygonowa.html">Wygonowa</a><div class="emptyline"><div class="line"></div></div></li>
+        <li><a href="sudecka.html">Sudecka 1,7km</a><div class="emptyline"><div class="line"></div></div></li>
+        <li><a href="gliwicka.html">Gliwicka</a><div class="emptyline"><div class="line"></div></div></li>
+        <li><a href="matejki.html">Matejki 0,2km</a><div class="emptyline"><div class="line"></div></div></li>
+        <li><a href="opawska.html">Opawska/Łąkowa 2,3km</a><div class="emptyline"><div class="line"></div></div></li>
+        <li><a href="miarki.html">Karola Miarki 0,3km</a><div class="emptyline"><div class="line"></div></div></li>
+        <li><a href="piaskowa.html">Piaskowa 1,45km</a><div class="emptyline"><div class="line"></div></div></li>
+        <li><a href="wschodnia.html">Wschodnia 0,45km</a><div class="emptyline"><div class="line"></div></div></li>
+        <li><a href="fabryczna.html">Fabryczna/Szkolna 0,6km</a><div class="emptyline"><div class="line"></div></div></li>
+        <li><a href="odra.html">Ścieżka wzdłuż Odry 11km</a><div class="emptyline"><div class="line"></div></div></li>
+        <li><a href="wal.html">Wał przeciwpowodziowy 4,4km</a><div class="emptyline"><div class="line"></div></div></li>
     </ul>
 </nav>
 <main>
