--- a/galeria.html
+++ b/galeria.html
@@ -26,21 +26,21 @@ div.desc {
 <body>
 
 <div class="gallery">
-  <a target="_blank" href="img_5terre.jpg">
+  <a target="_blank" href="pobrane.png">
     <img src="pobrane.png" alt="Cinque Terre" width="600" height="400">
   </a>
   <div class="desc">Add a description of the image here</div>
 </div>
 
 <div class="gallery">
-  <a target="_blank" href="img_forest.jpg">
+  <a target="_blank" href="pobrane (1).png">
     <img src="pobrane.png (1)" alt="Forest" width="600" height="400">
   </a>
   <div class="desc">Add a description of the image here</div>
 </div>
 
 <div class="gallery">
-  <a target="_blank" href="img_lights.jpg">
+  <a target="_blank" href="pobrane (2).png">
     <img src="pobrane (2).png" alt="Northern Lights" width="600" height="400">
   </a>
   <div class="desc">Add a description of the image here</div>
