--- a/galeria.html
+++ b/galeria.html
@@ -26,22 +26,22 @@ div.desc {
 <body>
 
 <div class="gallery">
-  <a target="_blank" href="pobrane.png">
-    <img src="pobrane.png" alt="Cinque Terre" width="600" height="400">
+  <a target="_blank" href="z1.jpg">
+    <img src="z1.jpg" alt="Cinque Terre" width="600" height="400">
   </a>
   <div class="desc">Add a description of the image here</div>
 </div>
 
 <div class="gallery">
-  <a target="_blank" href="pobrane (1).png">
-    <img src="pobrane.png (1)" alt="Forest" width="600" height="400">
+  <a target="_blank" href="z2.jpg">
+    <img src="z2.jpg" alt="Forest" width="600" height="400">
   </a>
   <div class="desc">Add a description of the image here</div>
 </div>
 
 <div class="gallery">
-  <a target="_blank" href="pobrane (2).png">
-    <img src="pobrane (2).png" alt="Northern Lights" width="600" height="400">
+  <a target="_blank" href="z3.jpg">
+    <img src="z3.jpg" alt="Northern Lights" width="600" height="400">
   </a>
   <div class="desc">Add a description of the image here</div>
 </div>
