--- a/galeria.html
+++ b/galeria.html
@@ -29,21 +29,21 @@ div.desc {
   <a target="_blank" href="z1.jpg">
     <img src="z1.jpg" alt="Cinque Terre" width="600" height="400">
   </a>
-  <div class="desc">Add a description of the image here</div>
+  <div class="desc">Panorama</div>
 </div>
 
 <div class="gallery">
   <a target="_blank" href="z2.jpg">
     <img src="z2.jpg" alt="Forest" width="600" height="400">
   </a>
-  <div class="desc">Add a description of the image here</div>
+  <div class="desc">Przejście graniczne</div>
 </div>
 
 <div class="gallery">
   <a target="_blank" href="z3.jpg">
     <img src="z3.jpg" alt="Northern Lights" width="600" height="400">
   </a>
-  <div class="desc">Add a description of the image here</div>
+  <div class="desc">Szkoła</div>
 </div>
 
 </body>
