--- a/zaliczenie/index.html
+++ b/zaliczenie/index.html
@@ -6,16 +6,23 @@
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Caveat:wght@500&family=Glass+Antiqua&family=Raleway:wght@300&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&display=swap" rel="stylesheet">
 <title>Ścieżki rowerowe Racibórz</title>
 </head>
 <body>
+
+<div id="subcontainer">
+    <img src="zdj.jpg" alt="sciezki" id="zdj">
+    <img src="layered-waves-haikei.svg" alt="fale" id="fale">
+    <h1>Przewodnik po ścieżkach rowerowych Raciborza</h1>
+</div>
 <div id="container">
 <header>
-        <img src="bike.png" width="100px">
-        Rowerowy Racibórz
+        Rowerowy <i class="demo-icon icon-bicycle"></i> Racibórz
 </header>
 <nav>
     <ul>
+        <li><p>Wybierz ścieżkę:</p></li>
         <li><a href="wilenska.html">Wileńska/Warszawska 1,2km</a><div class="emptyline"><div class="line"></div></div></li>
         <li><a href="marianska.html">Mariańska 1,6km</a><div class="emptyline"><div class="line"></div></div></li>
         <li><a href="brzeska.html">Brzeska 0,85km</a><div class="emptyline"><div class="line"></div></div></li>
@@ -36,11 +43,13 @@
     </ul>
 </nav>
 <main>
-        <iframe src="https://www.google.com/maps/d/u/0/embed?mid=1HOU2QrI7HCZR_d-ODoswNk1k-kir5TI&ehbc=2E312F&noprof=1" width="640" height="480"></iframe>
+    <br>
+    <h2>Interaktywna mapa ścieżek rowerowych w Raciborzu</h2>
+    <iframe src="https://www.google.com/maps/d/u/0/embed?mid=1HOU2QrI7HCZR_d-ODoswNk1k-kir5TI&ehbc=2E312F&noprof=1"></iframe>
 </main>
 <footer>
 	Strona autorstwa: Bartosz Gieda<br>
-	Wszystkie zdjęcia oraz filmy zostały nagrane przeze mnie. Ikony na stronie pochodzą z fontello.<br>
+	Wszystkie zdjęcia oraz filmy zostały nagrane przeze mnie.<br>
 	Strona nie jest bezpośrednio wzorowana na jakiejkolwiek istniejącej (wszelkie podobieństwa przypadkowe)<br>
 	Wykorzystałem na niej wiedzę zdobytą na lekcjach witryn i aplikacji, oraz różnych kursów:<br>
 	<ul>
@@ -48,6 +57,12 @@
 		<li><a href="https://www.youtube.com/playlist?list=PLOYHgt8dIdow6b2Qm3aTJbKT2BPo5iybv">Kurs CSS z kanału Pasja informatyki</a></li>
 		<li><a href="https://www.youtube.com/watch?v=FNmv5uh3ni4&t=784s">Animacje CSS w 30 minut z kanału Hello Roman</a></li>
 	</ul>
+    Strony których używałem podczas tworzenia strony:
+    <ul>
+    <li><a href="https://fonts.google.com">Google Fonts</a></li>
+    <li><a href="https://fontello.com">Fontello</a></li>
+    <li><a href="https://app.haikei.app">Haikei App</a></li>
+    </ul>
 </footer>
 </div>
 </body>
