--- a/multimedia.html
+++ b/multimedia.html
@@ -8,7 +8,7 @@
 <iframe width="560" height="315" src="https://www.youtube.com/embed/XuZneZzhYPg?si=XWENI3XBSAXp2coa" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/7n8QteibNle3drEyuwpOgJ?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
 <iframe src="https://www.google.com/maps/d/embed?mid=1m5lTatuUFJjmZyScjxAc4LBQNlZTV0Q&ehbc=2E312F" width="640" height="480"></iframe>
-<audio controls autoplay>
+<audio controls>
   <source src="Mig - Co ty mi dasz (Official Audio)_VdxOKLaK-BI.mp3" type="audio/mpeg">
 </audio>
 </body>
