--- a/canvas.html
+++ b/canvas.html
@@ -4,7 +4,9 @@
 <title>Multimedia i interfejsy - HTML5 </title>
 </head>
 <body onload = "setup();">
-<canvas id="canvas" width="400" height="300"/>
+ <canvas id="canvas" width="400" height="300"/>
  <script src="sierpinskiTriangle.js"></script>
+ <canvas id="canvas" width="163" height="772"></canvas>
+ <script src="wave1d.js"></script>
 </body>
 </html>
