--- a/canvas.html
+++ b/canvas.html
@@ -7,6 +7,7 @@
  <canvas id="canvas" width="400" height="300"/>
  <script src="sierpinskiTriangle.js"></script>
  <canvas id="canvas" width="163" height="772"></canvas>
+ <script src="requestAnimFrame.js"></script>
  <script src="wave1d.js"></script>
 </body>
 </html>
