--- a/canvas.html
+++ b/canvas.html
@@ -4,10 +4,13 @@
 <title>Multimedia i interfejsy - HTML5 </title>
 </head>
 <body onload = "setup();">
+ <div>
  <canvas id="canvas" width="400" height="300"/>
  <script src="sierpinskiTriangle.js"></script>
+ </div><div>
  <canvas id="canvas" width="163" height="772"></canvas>
  <script src="requestAnimFrame.js"></script>
  <script src="wave1d.js"></script>
+ </div>
 </body>
 </html>
