--- a/canvas.html
+++ b/canvas.html
@@ -7,10 +7,12 @@
  <div>
  <canvas id="canvas" width="400" height="300"/>
  <script src="sierpinskiTriangle.js"></script>
+ </canvas>
  </div><div>
- <canvas id="canvas" width="163" height="772"></canvas>
+ <canvas id="canvas" width="163" height="772">
  <script src="requestAnimFrame.js"></script>
  <script src="wave1d.js"></script>
+ </canvas>
  </div>
 </body>
 </html>
