--- a/canvas.html
+++ b/canvas.html
@@ -18,13 +18,15 @@
 </head>
 <body onload="setup();">
     <div>
-        <canvas id="canvas1" width="400" height="300"></canvas>
+        <canvas id="canvas1" width="400" height="300">
         <script src="sierpinskiTriangle.js"></script>
+        </canvas>
     </div>
     <div>
-        <canvas id="canvas2" width="163" height="772"></canvas>
+        <canvas id="canvas2" width="163" height="772">
         <script src="requestAnimFrame.js"></script>
         <script src="wave1d.js"></script>
+        </canvas>
     </div>
 </body>
 </html>
