--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
 <p>Projekty z zajęć</p>
 <div class="line"></div>
 <ul>
+  <li><a href="canvas3.html">Canvas3</a></li>
+  <li><a href="canvas2.html">Canvas2</a></li>
+  <li><a href="canvas.html">Canvas1</a></li>
   <li><a href="multimedia.html">multimedia</a></li>
   <li><a href="galeria.html">galeria</a></li>
   <li><a href="js/galeria.html">js1</a></li>
