--- a/zaliczenie/index.html
+++ b/zaliczenie/index.html
@@ -23,7 +23,7 @@
 </header>
 <nav>
     <ul>
-        <li><a href="bema.html">Galeria</a><div class="emptyline"><div class="line"></div></div></li>
+        <li><a href="galeria.html">Galeria</a><div class="emptyline"><div class="line"></div></div></li>
         <li><p>Wybierz ścieżkę:</p></li>
         <li><a href="bema.html">Bema</a><div class="emptyline"><div class="line"></div></div></li>
         <li><a href="bosacka.html">Bosacka</a><div class="emptyline"><div class="line"></div></div></li>
