--- a/zaliczenie/galeria.html
+++ b/zaliczenie/galeria.html
@@ -58,175 +58,168 @@
         </a>
     </div>
     <div class="con">
-        <a href="vid/bosacka.html">
+        <a href="vidbosacka.html">
             <img src="img/bosacka.png" />
             <div class="emptyline"><div class="line"></div></div>
             <div class="napis">Bosacka</div>
         </a>
     </div>
     <div class="con">
-        <a href="vid/brzeska.html">
+        <a href="vidbrzeska.html">
             <img src="img/brzeska.png" />
             <div class="emptyline"><div class="line"></div></div>
             <div class="napis">Brzeska</div>
         </a>
     </div>
     <div class="con">
-        <a href="vid/eichendorffa.html">
+        <a href="videichendorffa.html">
             <img src="img/eichendorffa.png" />
             <div class="emptyline"><div class="line"></div></div>
             <div class="napis">Eichendorffa</div>
         </a>
     </div>
     <div class="con">
-        <a href="vid/fabryczna.html">
+        <a href="vidfabryczna.html">
             <img src="img/fabryczna.png" />
             <div class="emptyline"><div class="line"></div></div>
             <div class="napis">Fabryczna/Szkolna</div>
         </a>
     </div>
     <div class="con">
-        <a href="vid/gliwicka.html">
+        <a href="vidgliwicka.html">
             <img src="img/gliwicka.png" />
             <div class="emptyline"><div class="line"></div></div>
             <div class="napis">Gliwicka</div>
         </a>
     </div>
     <div class="con">
-        <a href="vid/glubczycka.html">
+        <a href="vidglubczycka.html">
             <img src="img/glubczycka.png" />
             <div class="emptyline"><div class="line"></div></div>
             <div class="napis">Głubczycka</div>
         </a>
     </div>
     <div class="con">
-        <a href="vid/kopernika.html">
+        <a href="vidkopernika.html">
             <img src="img/kopernika.png" />
             <div class="emptyline"><div class="line"></div></div>
             <div class="napis">Kopernika</div>
         </a>
     </div>
     <div class="con">
-        <a href="vid/koszalinska.html">
+        <a href="vidkoszalinska.html">
             <img src="img/koszalinska.png" />
             <div class="emptyline"><div class="line"></div></div>
             <div class="napis">Koszalińska</div>
         </a>
     </div>
     <div class="con">
-        <a href="vid/lwowska.html">
+        <a href="vidlwowska.html">
             <img src="img/lwowska.png" />
             <div class="emptyline"><div class="line"></div></div>
             <div class="napis">Lwowska</div>
         </a>
     </div>
     <div class="con">
-        <a href="vid/1maja.html">
+        <a href="vid1maja.html">
             <img src="img/1maja.png" />
             <div class="emptyline"><div class="line"></div></div>
             <div class="napis">1 maja</div>
         </a>
     </div>
     <div class="con">
-        <a href="vid/marianska.html">
+        <a href="vidmarianska.html">
             <img src="img/marianska.png" />
             <div class="emptyline"><div class="line"></div></div>
             <div class="napis">Marianska</div>
         </a>
     </div>
     <div class="con">
-        <a href="vid/matejki.html">
+        <a href="vidmatejki.html">
             <img src="img/matejki.png" />
             <div class="emptyline"><div class="line"></div></div>
             <div class="napis">Matejki</div>
         </a>
     </div>
     <div class="con">
-        <a href="vid/ocicka.html">
+        <a href="vidocicka.html">
             <img src="img/ocicka.png" />
             <div class="emptyline"><div class="line"></div></div>
             <div class="napis">Ocicka</div>
         </a>
     </div>
     <div class="con">
-        <a href="vid/opawska.html">
+        <a href="vidopawska.html">
             <img src="img/opawska.png" />
             <div class="emptyline"><div class="line"></div></div>
             <div class="napis">Opawska/Łąkowa</div>
         </a>
     </div>
     <div class="con">
-        <a href="https://www.youtube.com/watch?v=eJW1ik-bcUY">
-            <img src="img/paryska.png" />
-            <div class="emptyline"><div class="line"></div></div>
-            <div class="napis">Paryska</div>
-        </a>
-    </div>
-    <div class="con">
-        <a href="vid/piaskowa.html">
+        <a href="vidpiaskowa.html">
             <img src="img/piaskowa.png" />
             <div class="emptyline"><div class="line"></div></div>
             <div class="napis">Piaskowa</div>
         </a>
     </div>
     <div class="con">
-        <a href="vid/podmiejska.html">
+        <a href="vidpodmiejska.html">
             <img src="img/podmiejska.png" />
             <div class="emptyline"><div class="line"></div></div>
             <div class="napis">Podmiejska</div>
         </a>
     </div>
     <div class="con">
-        <a href="vid/rybnicka.html">
+        <a href="vidrybnicka.html">
             <img src="img/rybnicka.png" />
             <div class="emptyline"><div class="line"></div></div>
             <div class="napis">Rybnicka</div>
         </a>
     </div>
     <div class="con">
-        <a href="vid/slowackiego.html">
+        <a href="vidslowackiego.html">
             <img src="img/slowackiego.png" />
             <div class="emptyline"><div class="line"></div></div>
             <div class="napis">Słowackiego</div>
         </a>
     </div>
     <div class="con">
-        <a href="vid/sudecka.html">
+        <a href="vidsudecka.html">
             <img src="img/sudecka.png" />
             <div class="emptyline"><div class="line"></div></div>
             <div class="napis">Sudecka</div>
         </a>
     </div>
     <div class="con">
-        <a href="vid/odra.html">
+        <a href="vidodra.html">
             <img src="img/odra.png" />
             <div class="emptyline"><div class="line"></div></div>
             <div class="napis">Ścieżka wzdłuż Odry</div>
         </a>
     </div>
     <div class="con">
-        <a href="vid/bema.html">
+        <a href="vidbema.html">
             <img src="img/bema.png" />
             <div class="emptyline"><div class="line"></div></div>
             <div class="napis">Ścieżka na zbiorniku</div>
         </a>
     </div>
     <div class="con">
-        <a href="vid/warszawska.html">
+        <a href="vidwarszawska.html">
             <img src="img/warszawska.png" />
             <div class="emptyline"><div class="line"></div></div>
             <div class="napis">Warszawska</div>
         </a>
     </div>
     <div class="con">
-        <a href="vid/wschodnia.html">
+        <a href="vidwschodnia.html">
             <img src="img/wschodnia.png" />
             <div class="emptyline"><div class="line"></div></div>
             <div class="napis">Wschodnia</div>
         </a>
     </div>
     <div class="con">
-        <a href="vid/wschodnia.html">
+        <a href="vidwschodnia.html">
             <img src="img/wschodnia.png" />
             <div class="emptyline"><div class="line"></div></div>
             <div class="napis">Wygonowa</div>
