--- a/zaliczenie/galeria.html
+++ b/zaliczenie/galeria.html
@@ -122,7 +122,7 @@
     </div>
     <div class="con">
         <a href="vid1maja.html">
-            <img src="img/1maja.png" />
+            <img src="img/maja1.png" />
             <div class="emptyline"><div class="line"></div></div>
             <div class="napis">1 maja</div>
         </a>
