--- a/zaliczenie/galeria.html
+++ b/zaliczenie/galeria.html
@@ -198,8 +198,8 @@
         </a>
     </div>
     <div class="con">
-        <a href="vidbema.html">
-            <img src="img/bema.png" />
+        <a href="vidwal.html">
+            <img src="img/wal.png" />
             <div class="emptyline"><div class="line"></div></div>
             <div class="napis">Ścieżka na zbiorniku</div>
         </a>
@@ -220,7 +220,7 @@
     </div>
     <div class="con">
         <a href="vidwschodnia.html">
-            <img src="img/wschodnia.png" />
+            <img src="img/wygonowa.png" />
             <div class="emptyline"><div class="line"></div></div>
             <div class="napis">Wygonowa</div>
         </a>
