--- a/zaliczenie/galeria.html
+++ b/zaliczenie/galeria.html
@@ -121,8 +121,8 @@
         </a>
     </div>
     <div class="con">
-        <a href="vid1maja.html">
-            <img src="img/maja1.png" />
+        <a href="vidmaja1.html">
+            <img src="img/1maja.png" />
             <div class="emptyline"><div class="line"></div></div>
             <div class="napis">1 maja</div>
         </a>
