--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 <p>Projekty z zajęć</p>
 <div class="line"></div>
 <ul>
+  <li><a href="zaliczenie/php/1podstawy.php">PHP</a></li>
   <li><a href="zaliczenie/index.html">Zaliczenie</a></li>
   <li><a href="canvas3.html">Canvas3</a></li>
   <li><a href="canvas2.html">Canvas2</a></li>
